<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
    
   <ScrollView
	android:layout_width="match_parent"
	android:layout_height="0dp"
    android:layout_weight="10"
	android:scrollbars="vertical" > 
          
    	<TextView 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_margin="5dp"
	        android:hint="@string/listening" 
	        android:id="@+id/info"
	        android:textSize="@dimen/tx_size_24"/>
     </ScrollView> 

<!--   	<Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/send"
        android:id="@+id/send"
       />  -->
       
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
 				<LinearLayout
	                 android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1"
	                android:orientation="horizontal"
	                android:background="@drawable/white_border"
	                android:layout_margin="5dp"
	                android:padding="2dp" >
	                <ToggleButton
					     android:id="@+id/tb_auto"  
					     android:layout_width="0dp"  
					     android:layout_height="match_parent"
					     android:layout_weight="1" 
					     android:textOn="@string/auto"
                         android:textOff="@string/manual"/> 
		            <Button
		                android:id="@+id/send"
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="2"
		                android:text="@string/send" />
	            </LinearLayout>
	            
 				<LinearLayout
	                 android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1"
	                android:orientation="horizontal"
	                android:background="@drawable/white_border" 
	                android:layout_margin="5dp"
	                android:padding="2dp"
	                >
		            
 				    <Button
	                android:id="@+id/clear"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/clear"/>
 				    
		        </LinearLayout>
	            
	            
	        </LinearLayout>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/listening" 
        android:id="@+id/tv_status"
        android:textColor="#ff0000"
        android:textSize="@dimen/tx_size_24"
        />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/calltime"
        android:textSize="@dimen/tx_size_24"
        />
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/displaycalltime"
        android:text=""
        android:gravity="center"
        android:textSize="@dimen/tx_size_45"
        android:textColor="#0000ff"
        android:id="@+id/time"
        />
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/callerID"
        android:textSize="@dimen/tx_size_24"
        />
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/displaycallnumber"
        android:text=""
        android:gravity="center"
        android:textSize="@dimen/tx_size_45"
        android:textColor="#0000ff"
        android:id="@+id/phone"
        />
   <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/exit"
        android:id="@+id/exit"
        android:visibility="gone"
       /> 
       
   
       
</LinearLayout>
